# spring25_taxi

./: .gitignore  pyproject.toml  requirements_with_version.txt
.github/workflows/: inference_pipeline.yaml
models/: lgb_model.pkl
notebooks/: 01_fetch_data.ipynb  02_validate_and_save.ipynb  03_transform_processed_data_into_ts_data.ipynb  04_transform_ts_data_into_features_and_targets.ipynb  05_transform_raw_data_into_features_and_targets.ipynb  07_baseline_models.ipynb  08_xgboost_model.ipynb  09_lightgbm_model.ipynb  10_lgm_with_fe.ipynb  11_lgm_hyper.ipynb  12_load_features_hopsworks.ipynb  13_feature_pipeline.ipynb  14_model_training_pipeline.ipynb  15_predict_using_hopsworks_model.ipynb  16_inference_pipeline.ipynb  17_fetch_predictions.ipynb
src/: feature_pipeline.py  plot_utils.py
