[project]
name = "spring25-taxi"
version = "0.1.0"
description = ""
authors = [
    {name = "Ashish Gajjela",email = "ashishgajjela055@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "notebook (>=7.3.2,<8.0.0)",
    "pandas (==2.1.4)"
]

[tool.poetry]
packages = [{include = "spring25_taxi", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
